<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBg">

    <include
        layout="@layout/layout_common_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_account"
            android:hint="@string/user_account2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/text_margin_user"
            android:paddingBottom="@dimen/text_margin_user"
            android:background="@null"
            android:textColorHint="@color/colorLightGray"
            android:textSize="@dimen/content_text_size"
            android:textColor="@color/colorMiddleGray"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="11"
            android:singleLine="true"/>

        <View style="@style/Divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/text_yzm"
                android:text="@string/get_yzm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/text_margin_user"
                android:paddingBottom="@dimen/text_margin_user"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textColor="@drawable/selector_text_blue_gray"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_yzm"
                android:hint="@string/user_dx_yzm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/text_margin_user"
                android:paddingBottom="@dimen/text_margin_user"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/text_yzm"
                android:background="@null"
                android:textColorHint="@color/colorLightGray"
                android:textSize="@dimen/content_text_size"
                android:textColor="@color/colorMiddleGray"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_btn_corner_blue"
        android:textColor="@color/white"
        android:textSize="17sp"
        style="?android:attr/borderlessButtonStyle"
        />

</LinearLayout>
