<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

    <include
        layout="@layout/layout_common_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:hint="@string/user_account2"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingBottom="@dimen/text_margin_user"
            android:paddingTop="@dimen/text_margin_user"
            android:singleLine="true"
            android:textColor="@color/colorMiddleGray"
            android:textColorHint="@color/colorLightGray"
            android:textSize="@dimen/content_text_size"/>


        <View
            style="@style/Divider"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/text_dxyzm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="@dimen/text_margin_user"
                android:paddingTop="@dimen/text_margin_user"
                android:text="@string/get_yzm"
                android:textColor="@drawable/selector_text_blue_gray"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_yzm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/text_dxyzm"
                android:background="@null"
                android:hint="@string/user_dx_yzm"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="@dimen/text_margin_user"
                android:paddingTop="@dimen/text_margin_user"
                android:singleLine="true"
                android:textColor="@color/colorMiddleGray"
                android:textColorHint="@color/colorLightGray"
                android:textSize="@dimen/content_text_size"/>

        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/selector_btn_corner_blue"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="17sp"
        />

</LinearLayout>
