<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBg">

    <include
        layout="@layout/layout_common_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/text_phone"
            android:text="手机号"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/text_margin_user"
            android:layout_marginBottom="@dimen/text_margin_user"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="@dimen/content_text_size"/>

        <View style="@style/Divider" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_password_new"
            android:hint="@string/user_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/text_margin_user"
            android:layout_marginBottom="@dimen/text_margin_user"
            android:background="@null"
            android:textColorHint="@color/colorLightGray"
            android:textSize="@dimen/content_text_size"
            android:textColor="@color/colorMiddleGray"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="12"
            android:singleLine="true"/>

        <View style="@style/Divider" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_password_confirm"
            android:hint="@string/user_password_comfit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/text_margin_user"
            android:layout_marginBottom="@dimen/text_margin_user"
            android:background="@null"
            android:textColorHint="@color/colorLightGray"
            android:textSize="@dimen/content_text_size"
            android:textColor="@color/colorMiddleGray"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="12"
            android:singleLine="true"/>

        <View style="@style/Divider" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_password"
        android:text="@string/user_password_edit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_btn_corner_blue"
        android:textColor="@color/white"
        android:textSize="17sp"
        style="?android:attr/borderlessButtonStyle"
        />

</LinearLayout>
